java: use 'Byte.valueOf' instead of 'new Byte'
Change-Id: Ia99765a6226317ee41ffb02a1b0dd7e6fd944a90